--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@ body {
 .header-link:active {
   color: var(--links-text-color);
 }
+.current {
+  color: var(--links-text-color);
+}
 .header-contacts-link {
   font-weight: 500;
   font-size: 14px;
@@ -85,13 +88,15 @@ body {
 }
 /* ---------------ОПИСАНИЕ ОСОБЕННОСТЕЙ----------- */
 
-.benefits-tittle {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--tittle-text-color);
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
 }
 .benefits-tittles {
   font-weight: 700;
